Make tag accesses more resilient and consistent in case Mojang removes tags in the future